--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ DST-62, 2021-22<br></h1>
 
 <a href="https://github.com/FierceDra-X/FierceDra-X.github.io/tree/main/module_0">Module 0</a><br>
 
-Module 1<br>
+<a href="https://github.com/FierceDra-X/FierceDra-X.github.io/tree/main/module_0">Module 1</a><br>
 
 Module 2<br>
 
